[metadata]
name = pytd
version = 1.7.1
summary = Treasure Data Driver for Python
author = Treasure Data
author_email = support@treasure-data.com
maintainer = Treasure Data
maintainer_email = support@treasure-data.com
license = Apache License 2.0
license_files =
    LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/treasure-data/pytd
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Database
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.7,<3.12
install_requires =
    urllib3>=1.21.1
    presto-python-client>=0.6.0
    pandas>=1.3
    numpy>1.17.3, <2.0.0
    td-client>=1.1.0
    pytz>=2018.5
    tqdm<=4.67.0

[options.extras_require]
spark =
    td-pyspark>20.10.0
    pyspark>=3.0.0
    pyarrow>=10.0
test = pytest
doc =
    sphinx>=2.2.0
    sphinx_rtd_theme
    numpydoc
    ipython

[options.packages.find]
exclude = *tests*

[flake8]
ignore = E203, W503
max-line-length = 88
exclude =
    .git,
    __pycache__,
    build,
    dist,
    appveyor,
    .venv,
    # To avoid this issue: https://gitlab.com/pycqa/flake8/issues/375
    pytd/pandas_td/ipython.py
    doc/conf.py

[isort]
known_third_party = IPython,msgpack,nox,numpy,pandas,pkg_resources,prestodb,pytz,setuptools,tdclient,tqdm
line_length=88
multi_line_output=3
include_trailing_comma=True
